fix(dropdown): improve color contrast ratio in selected state for low vision users

--- a/projects/angular/src/popover/dropdown/_dropdown.clarity.scss
+++ b/projects/angular/src/popover/dropdown/_dropdown.clarity.scss
@@ -140,6 +140,10 @@
 
       @extend %dropdown-content;
 
+      &.active {
+        position: relative;
+      }
+
       &.expandable {
         padding-right: tokens.$cds-global-space-5;
 
@@ -184,6 +188,20 @@
     .btn,
     .dropdown-item {
       @include menu-mixins.generate-dropdown-item-height();
+    }
+
+    .dropdown-item {
+      &.active:before {
+        content: '';
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        border: none;
+        border-left: var(--cds-alias-object-border-width-300) solid var(--cds-alias-status-info);
+        transition: border-left 0.2s ease-in;
+      }
     }
 
     a.dropdown-item {
